# streamlit_project

./: .gitignore  Noops.py  Pipfile  README.md  main.py  pyproject.toml
pages/: 1_📊Data Viewer.py  1_🔎Data Viewer.py  2_📊Data Distrubution.py  3_🎇Data Augmentation.py  4_segmentation.py  4_✂️Segmentation.py
utils/: aug.py  data.py  distribution.py
utils/distribution_plotly/: data_Class per image distribution  trash_Class number distribution  trash_Color distribution  trash_Object number per image distribution  trash_Segmentation proportion distribution  val2017_Class distribution  val2017_Class per image distribution  val2017_Proportion distribution
