[tool.poetry]
name = "streamlit-project"
version = "0.1.0"
description = ""
authors = ["sihyeong671 <bshlab671@naver.com>"]
readme = "README.md"
packages = [{include = "streamlit_project"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
opencv-python = "^4.6.0.66"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
